--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial - Deconvolution with SUNet"
+    "# Tutorial - Image Deconvolution with SUNet"
    ]
   },
   {
@@ -145,6 +145,16 @@
       "/Users/utsavakhaury/opt/miniconda3/envs/test3/lib/python3.10/site-packages/torch/functional.py:478: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1656352706847/work/aten/src/ATen/native/TensorShape.cpp:2895.)\n",
       "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1, 128, 128)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -158,7 +168,9 @@
     "                                sampling_factor = 4,                                             # Factor by which the PSF is oversampled with respect to the noisy image\n",
     "                                SUNet_path = '/Users/utsavakhaury/Thesis/SUNet/',                # Path to SUNet repository\n",
     "                                model_dir = '/Users/utsavakhaury/Thesis/SUNet/checkpoints/',     # Path to SUNet model directory\n",
-    "                                model_name = 'new_model_bestSSIM_ep-400_bs-16_ps-1.pth')         # Name of the pre-trained SUNet model)"
+    "                                model_name = 'new_model_bestSSIM_ep-400_bs-16_ps-1.pth')         # Name of the pre-trained SUNet model)\n",
+    "\n",
+    "deconv_result.shape             # same as vlt.shape"
    ]
   },
   {
