--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -170,7 +170,7 @@
     "                                model_dir = '/Users/utsavakhaury/Thesis/SUNet/checkpoints/',     # Path to SUNet model directory\n",
     "                                model_name = 'new_model_bestSSIM_ep-400_bs-16_ps-1.pth')         # Name of the pre-trained SUNet model)\n",
     "\n",
-    "deconv_result.shape             # same as vlt.shape"
+    "deconv_result.shape             # Shape = (vlt.shape[0], vlt.shape[1], vlt.shape[2]*sampling_factor, vlt.shape[3]*sampling_factor)"
    ]
   },
   {
