--- a/Deconvolution/tutorial.ipynb
+++ b/Deconvolution/tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial - Image Deconvolution with SUNet"
+    "# Ground-based Image Deconvolution with Swin Transformer UNet (SUNet)"
    ]
   },
   {
@@ -18,7 +18,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/utsavakhaury/opt/miniconda3/envs/sunet/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from deconv_sunet import deconv_sunet\n",
     "import numpy as np\n",
@@ -64,7 +73,7 @@
     "        \n",
     "\"\"\"\n",
     "\n",
-    "vlt = np.load('../Cantale_dat/Results/Paper/Obj_4/vlt.npy')\n",
+    "vlt = np.load('Data/vlt.npy')\n",
     "\n",
     "print('Dimensions =', vlt.shape)\n",
     "cmap = 'RdBu_r'\n",
@@ -116,7 +125,7 @@
     "        \n",
     "\"\"\"\n",
     "\n",
-    "psf = np.load('../Cantale_dat/psfs/psf_vlt.npy')\n",
+    "psf = np.load('Data/psf_vlt.npy')\n",
     "psf = np.expand_dims(psf, axis=0)\n",
     "\n",
     "print('Dimensions =', psf.shape)\n",
@@ -160,7 +169,7 @@
     }
    ],
    "source": [
-    "hst = np.load('../Cantale_dat/Results/Paper/Obj_4/HST_norm.npy')\n",
+    "hst = np.load('Data/hst.npy')\n",
     "\n",
     "print('Dimensions =', hst.shape)\n",
     "\n",
@@ -187,7 +196,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/utsavakhaury/opt/miniconda3/envs/test3/lib/python3.10/site-packages/torch/functional.py:478: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1656352706847/work/aten/src/ATen/native/TensorShape.cpp:2895.)\n",
+      "/Users/utsavakhaury/opt/miniconda3/envs/sunet/lib/python3.10/site-packages/torch/functional.py:478: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1656352706847/work/aten/src/ATen/native/TensorShape.cpp:2895.)\n",
       "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
      ]
     },
@@ -218,7 +227,7 @@
     "                                sampling_factor = sampling_factor,                               # Sampling factor\n",
     "                                SUNet_path = '/Users/utsavakhaury/Thesis/SUNet/',                # Path to SUNet repository\n",
     "                                model_dir = '/Users/utsavakhaury/Thesis/SUNet/checkpoints/',     # Path to SUNet model directory\n",
-    "                                model_name = 'new_model_bestSSIM_ep-400_bs-16_ps-1.pth')         # Name of the pre-trained SUNet model)\n",
+    "                                model_name = 'SUNet_model_bestSSIM_ep-400_bs-16_ps-1.pth')         # Name of the pre-trained SUNet model)\n",
     "\n",
     "deconv_result.shape             # Shape = (vlt.shape[0], vlt.shape[1], vlt.shape[2]*sampling_factor, vlt.shape[3]*sampling_factor)"
    ]
@@ -283,9 +292,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test3",
+   "display_name": "sunet",
    "language": "python",
-   "name": "test3"
+   "name": "sunet"
   },
   "language_info": {
    "codemirror_mode": {
